css/style.css
/* =================================== */
/*	Basic Style 
/* =================================== */
body {
  background-color: #fff;
  font-family: "homa", sans-serif;
  line-height: 24px;
  font-size: 16px;
  color: #818181;
}

figure,
p,
address {
  margin: 0;
}

iframe {
  border: 0;
}

a {
  color: #0aa6bd;
  transition: all 0.3s ease-out 0s;
}

a,
a:hover,
a:focus,
.btn:focus {
  text-decoration: none;
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: "Open Sans", sans-serif;
  color: #252525;
}

p {
  font-size: 15px;
}

main > section {
  padding: 70px 0;
}

.btn {
  border-radius: 0;
  border: 0;
  position: relative;
  text-transform: uppercase;
}

.btn-blue {
  background-color: rgba(10, 166, 189, 0.75);
  box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.15) inset;
  padding: 15px 55px;
  color: #fff;
}

.btn-border {
  border: 2px solid #fff;
  color: #fff;
  padding: 12px 35px;
}

.bg-blue {
  background-color: #0aa6bd;
}

/* Sweep To Right */
.btn-effect {
  vertical-align: middle;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  display: inline-block;
  transform: translateZ(0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  transition-property: color;
  transition-duration: 0.3s;
  -moz-osx-font-smoothing: grayscale;
}

.btn-effect:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #fff;
  transform: scaleX(0);
  transform-origin: 0 50%;
  transition-property: transform;
  transition-duration: 0.3s;
  transition-timing-function: ease-out;
}

.btn-effect:hover,
.btn-effect:focus,
.btn-effect:active {
  color: rgb(9, 157, 178);
}

.btn-effect:hover:before,
.btn-effect:focus:before,
.btn-effect:active:before {
  transform: scaleX(1);
}

.section-title {
  margin-bottom: 80px;
}

.section-title.white {
  color: #fff;
}

.section-title h2 {
  color: #0aa6bd;
  font-size: 24px;
  font-weight: 700;
  line-height: 20px;
  margin-bottom: 25px;
  padding-bottom: 20px;
  position: relative;
  text-transform: uppercase;
}

.section-title p {
  color: #444;
  font-style: italic;
  font-size: 13px;
}

.section-title.white p {
  color: #fff;
}

.section-title.white h2 {
  color: #fff;
}

.section-title h2:after {
  position: absolute;
  left: 50%;
  bottom: 0;
  height: 2px;
  width: 72px;
  margin-left: -36px;
  background: #636363;
  content: "";
}

.section-title.white h2:after {
  background: #fff;
}

.parallax {
  background-attachment: fixed;
  background-position: center top;
  background-repeat: no-repeat;
  background-size: cover;
}

/**
/*	Preloader
/* ==========================================*/
#preloader {
  background-color: #fff;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 9999;
}

/*Battery*/
.loder-box {
  background-color: rgba(0, 0, 0, 0.02);
  border-radius: 1px;
  height: 100px;
  left: 50%;
  margin-left: -64px;
  margin-top: -50px;
  position: absolute;
  top: 50%;
  width: 128px;
}

.battery {
  width: 60px;
  height: 25px;
  top: 35%;
  border: 1px #2e2e2e solid;
  border-radius: 2px;
  position: relative;
  -webkit-animation: charge 5s linear infinite;
  animation: charge 5s linear infinite;
  margin: 0 auto;
}

.battery:after {
  background-color: #2e2e2e;
  border-radius: 0 1px 1px 0;
  content: "";
  height: 10px;
  position: absolute;
  right: -5px;
  top: 7px;
  width: 3px;
}

@-webkit-keyframes charge {
  0% {
    box-shadow: inset 0px 0px 0px #2e2e2e;
  }
  100% {
    box-shadow: inset 60px 0px 0px #2e2e2e;
  }
}
@keyframes charge {
  0% {
    box-shadow: inset 0px 0px 0px #2e2e2e;
  }
  100% {
    box-shadow: inset 60px 0px 0px #2e2e2e;
  }
}
/**
/*	Header
/* ==========================================*/
#navigation {
  transition: all 0.8s ease 0s;
  background-color: rgba(0, 0, 0, 0.77);
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
  padding: 5px 0;
}

#navigation.animated-header {
  padding: 10px 0;
}

.nav-link {
  font-size: 15px;
}

.navbar-dark .navbar-nav .nav-link {
  color: #fff;
}
.navbar-dark .navbar-nav .nav-link:hover {
  color: #fff;
}

.nav-item {
  position: relative;
  margin: 0 10px;
}
.nav-item::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #0aa6bd;
  visibility: hidden;
  transform: scaleX(0);
  transition: all 0.3s ease-in-out 0s;
}
.nav-item:hover::before {
  visibility: visible;
  transform: scaleX(1);
}

/*=================================================================
	Home Slider
==================================================================*/
#home-slider {
  position: relative;
  padding: 0;
}

.mask-overly {
  background: rgba(0, 0, 0, 0.2) none repeat scroll 0 0;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 9;
}

.slider-1 {
  background-image: url(../images/slider/slider-1.jpg);
}

.slider-2 {
  background-image: url(../images/slider/slider-2.jpg);
}

.slider-3 {
  background-image: url(../images/slider/slider-3.jpg);
}

.sl-slider-wrapper {
  width: 100%;
  margin: 0 auto;
  position: relative;
  overflow: hidden;
}

.sl-slider {
  position: absolute;
  top: 0;
  left: 0;
}

/* Slide wrapper and slides */
.sl-slide,
.sl-slides-wrapper,
.sl-slide-inner {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.sl-slide {
  z-index: 1;
}

.slide-caption {
  color: #fff;
  display: table;
  height: 100%;
  left: 0;
  min-height: 100%;
  position: absolute;
  text-align: center;
  top: 0;
  width: 60%;
  z-index: 999999;
  left: 50%;
  transform: translateX(-50%);
}

.slide-caption .caption-content {
  vertical-align: middle;
  display: table-cell;
}

.caption-content h2 {
  color: #fff;
  font-size: 50px;
  font-weight: 900;
  margin-bottom: 25px;
}

.caption-content > p {
  display: block;
  font-size: 16px;
  margin-bottom: 45px;
  text-transform: capitalize;
  margin-bottom: 65px;
  font-weight: 200;
}
/* ... */

